--- a/web/demoJstl/demoJstl/build.gradle
+++ b/web/demoJstl/demoJstl/build.gradle
@@ -2,9 +2,7 @@ plugins {
     id 'java'
     id 'war'
 }
-dependencies {
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-}
+
 group 'com.example'
 version '1.0-SNAPSHOT'
 
@@ -13,7 +11,7 @@ repositories {
 }
 
 ext {
-    junitVersion = '5.8.2'
+    junitVersion = '5.9.1'
 }
 
 sourceCompatibility = '1.8'
@@ -25,7 +23,7 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
-
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
