--- a/web/pc/build.gradle
+++ b/web/pc/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'java'
     id 'war'
 }
-
+dependencies {
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+}
 group 'com.example'
 version '1.0-SNAPSHOT'
 
