--- a/web/demoLinh/quan_ly_sann_pham/build.gradle
+++ b/web/demoLinh/quan_ly_sann_pham/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+    implementation group: 'org.atmosphere.client', name: 'javascript', version: '3.1.3'
+
 }
 
 test {
