--- a/web/Tien_Thanh/Tien_Thanh/build.gradle
+++ b/web/Tien_Thanh/Tien_Thanh/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
     implementation group: 'org.atmosphere.client', name: 'javascript', version: '3.1.3'
-
+//    implementation group: 'joda-time', name: 'joda-time', version: '2.12.5'
 }
 
 test {
