--- a/Module 4/Code_Module4/TuDienDonGian/build.gradle
+++ b/Module 4/Code_Module4/TuDienDonGian/build.gradle
@@ -22,6 +22,14 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
+    implementation 'org.json:json:20210307'
+
+    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+    implementation group: 'org.atmosphere.client', name: 'javascript', version: '3.1.3'
+
+    // gradle này là cho spring MVC
     implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     implementation group: 'org.springframework', name: 'spring-core', version: '4.3.17.RELEASE'
     implementation group: 'org.springframework', name: 'spring-context', version: '4.3.17.RELEASE'
