--- a/Module 4/tien_thanh/tiem_cam_do_tien_thanh/build.gradle
+++ b/Module 4/tien_thanh/tiem_cam_do_tien_thanh/build.gradle
@@ -41,6 +41,8 @@ dependencies {
   implementation group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
   implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '1.2'
 
+  // gradle này để chỉnh lại parttern trong html
+  implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time', version: '3.0.4.RELEASE'
 }
 
 test {
