--- a/Module 4/Tiệm cầm đồ Tiên Thanh/tienthanh/build.gradle
+++ b/Module 4/Tiệm cầm đồ Tiên Thanh/tienthanh/build.gradle
@@ -22,13 +22,6 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-  // gradle này là cho servlet
-  implementation 'org.json:json:20210307'
-  compileOnly('javax.servlet:javax.servlet-api:4.0.1')
-  implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
-  implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
-  implementation group: 'org.atmosphere.client', name: 'javascript', version: '3.1.3'
-
   // gradle này là cho spring MVC
   implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
   implementation group: 'org.springframework', name: 'spring-core', version: '4.3.17.RELEASE'
@@ -40,6 +33,13 @@ dependencies {
   // gradle này là cho html
   implementation group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
   implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '1.2'
+
+  // gradle này để chỉnh lại parttern trong html
+  implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
+
+  // gradle này cho kết nối với SQL ( ORM )
+  implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.3.Final'
+  implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
 }
 
 test {
