--- a/Module 4/Tiệm cầm đồ Tiên Thanh/tiem_cam_do_tien_thanh/build.gradle
+++ b/Module 4/Tiệm cầm đồ Tiên Thanh/tiem_cam_do_tien_thanh/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation 'org.json:json:20210307'
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
-//    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
     implementation group: 'org.atmosphere.client', name: 'javascript', version: '3.1.3'
 
     // gradle này là cho spring MVC
