--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Netbeans/demo_netbeans/target/
 /Netbeans/mavenproject1/target/
 /Netbeans/tiem_cam_do_tien_thanh/target/
+/Netbeans/Lab6Test/build/
+/Netbeans/Lab6Test/nbproject/private/
