--- a/Module 4/Tiệm cầm đồ Tiên Thanh/TIEN_THANH/build.gradle
+++ b/Module 4/Tiệm cầm đồ Tiên Thanh/TIEN_THANH/build.gradle
@@ -23,12 +23,12 @@ tasks.withType(JavaCompile) {
 
 dependencies {
 //  //  // gradle này là cho servlet
-////  implementation 'org.json:json:20210307'
-////  compileOnly('javax.servlet:javax.servlet-api:4.0.1')
-////  implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
-////  implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
-////  implementation group: 'org.atmosphere.client', name: 'javascript', version: '3.1.3'
-////
+  implementation 'org.json:json:20210307'
+  compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+  implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+  implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+  implementation group: 'org.atmosphere.client', name: 'javascript', version: '3.1.3'
+
 ////  // gradle này là cho spring MVC
 ////  implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 ////  implementation group: 'org.springframework', name: 'spring-core', version: '4.3.17.RELEASE'
@@ -104,4 +104,5 @@ dependencies {
 //}
 
 test {
-  useJUnitPlatform()  }
+  useJUnitPlatform()
+}
